--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@semantic-release-extras/verified-git-commit": "1.0.0",
+    "@semantic-release/changelog": "6.0.2",
     "semantic-release": "20.1.0"
   }
 }
