--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@semantic-release-extras/verified-git-commit": "1.0.1"
+  },
   "devDependencies": {
-    "@semantic-release-extras/verified-git-commit": "1.0.0",
     "@semantic-release/changelog": "6.0.2",
     "semantic-release": "20.1.0"
   }
